--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 height: 100px;
 
                 border-radius: 100%;
-                border : 4.5px solid #F7EBE0;
+                border : 4.5px solid #f5e9dc;
 
                 background-image: url('profile_image.jpg');
                 background-position: center;
@@ -68,7 +68,7 @@
 
                     font-size: 14.5px;
                     font-weight: bold;
-                    color: #3E4550;
+                    color: #8e7185;
 
                     display: flex;
                     flex-direction: column;
@@ -94,7 +94,7 @@
         <a target="_blank" href="https://www.instagram.com/jesimsim/">인스타그램</a>
         <a target="_blank" href="https://github.com/Jesimsim">깃헙</a>
         <a target="_blank" href="https://jesimsim.tistory.com/">티스토리</a>
-        <a target="_blank" href="http://www.yes24.com/Product/Goods/8585347">추천책 - 훔쳐라 아티스트처럼</a>
+        <a target="_blank" href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=269943212">추천책 - 데이터 과학을 위한 통계🦀</a>
     </div>
     </div>
 </body>
