--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         <p class="sub">My Learning Mode ON !</p>
         <a target="_blank" href="https://www.instagram.com/jesimsim/">인스타그램</a>
         <a target="_blank" href="https://github.com/Jesimsim">깃헙</a>
-        <a target="_blank" href="https://jesimsim.tistory.com/">티스토리</a>
-        <a target="_blank" href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=269943212">추천책 - 데이터 과학을 위한 통계🦀</a>
+        <a target="_blank" href="https://jesimsim.tistory.com/7">티스토리 - 부트캠프 2개월차 </a>
+        <a target="_blank" http://www.yes24.com/Product/Goods/57445016">추천책 - 모든 것이 되는 법🐣</a>
     </div>
     </div>
 </body>
