--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a target="_blank" href="https://www.instagram.com/jesimsim/">인스타그램</a>
         <a target="_blank" href="https://github.com/Jesimsim">깃헙</a>
         <a target="_blank" href="https://jesimsim.tistory.com/7">티스토리 - 부트캠프 2개월차 </a>
-        <a target="_blank" http://www.yes24.com/Product/Goods/57445016">추천책 - 모든 것이 되는 법🐣</a>
+        <a target="_blank" https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=124800455">추천책 - 모든 것이 되는 법🐣</a>
     </div>
     </div>
 </body>
